fix collapsed dropdown width

--- a/styles/index.css
+++ b/styles/index.css
@@ -56,7 +56,6 @@ h1 {
   position: absolute;
   left: 0;
   top: 2.5em;
-  width: 100%;
   border-radius: 0.5rem;
   background: #004b8f;
   box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.5);
